--- a/src/app/nova-trasferencia/nova-trasferencia.component.html
+++ b/src/app/nova-trasferencia/nova-trasferencia.component.html
@@ -6,7 +6,7 @@
     </h2>
     <div class="form-field">
       <label class="form-field__label" for="valor">Valor: </label>
-      <input class="form-field__input" name="valor" type="text" id="valor" [(ngModel)]="valor">
+      <input class="form-field__input" name="valor" type="number" id="valor" [(ngModel)]="valor">
     </div>
     <br>
     <div class="form-field">
