--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-nova-trasferencia (aoTransferir)="trasferir($event)"></app-nova-trasferencia>
 <br>
-<app-extrato [tranferencias]="trasferencias"></app-extrato>
+<app-extrato></app-extrato>
