--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,10 @@
   --cinza-claro: #2e2e2e;
 }
 
-* {
-  font-family: "Roboto", sans-serif;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
