--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-nova-trasferencia (aoTransferir)="trasferir($event)"></app-nova-trasferencia>
-<br>
-<app-extrato></app-extrato>
+<header>
+  <a routerLink="extrato"> Extrato </a>
+  <a routerLink="novatransferencia" routerLinkActive="ativo"> Nova Transferencia </a>
+</header>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
